--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,3 +190,20 @@ p.explain {
     margin-bottom: 0;
     word-wrap: break-word;
 }
+
+table {
+    border-collapse: collapse;
+    border: 2px solid #fff;
+    letter-spacing: 1px;
+    font-size: 0.8rem;
+    width: 30vw;
+}
+
+td, th {
+    border: 1px solid #fff;
+    padding: 1px 2px;
+}
+
+td { text-align: center; }
+
+td.failed { background-color: rgba(167, 18, 18, 0.795); }
